k8s/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-api
spec:
  selector:
    app: payments-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
